--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
           <li>Tentang penulis</li>
           <li>Daftar puisi</li>
+          <li>Puisi favorit</li>
           <li>Media sosial</li>
         </ul>
       </div>
@@ -30,6 +31,8 @@
         <ul>
           <li>Kata-kata indah</li>
           <li>Cara menulis</li>
+          <li>Reply</li>
+          <li>Tentang puisi</li>
           <li>Media sosial</li>
         </ul>
       </div>
