--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <!-- Add a <div> tag with the "contents-item" class -->
         <div class="contents-item">
-          <img src="https://https://twitter.com/Lian1i4n/status/1306773777703862272/photo/3">
+          <img src="https://https://twitter.com/Lian1i4n/status/1306773777703862272/photo/3/wp3544184.jpg">
           <p>HTML & CSS</p>
         </div>
       </div>
