--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <div class="main">
       <div class="copy-container">
-        <h1>HELLO WORLD<span>.</span></h1>
-        <h2>Let's learn to code</h2>
+        <h1>APA KAMU NGGAK CAPEK NUGAS TERUS?<span>.</span></h1>
+        <h2>YUK MALMINGAN</h2>
       </div>
       
       <div class="contents">
         <!-- Add a <h3> tag -->
-        <h3>Lessons</h3>
+        <h3>SENYUMNYA BANYAKINNNNN</h3>
         
         <!-- Add a <div> tag with the "contents-item" class -->
         <div class="contents-item">
