--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Eunoia</div>
+      <div class="header-logo">CUKUP</div>
       <div class="header-list">
         <ul>
-          <li>Tentang penulis</li>
-          <li>Daftar puisi</li>
-          <li>Puisi favorit</li>
-          <li>Media sosial</li>
+          <li>CARA TIDUR CEPAT</li>
+          <li>CARA RELAX</li>
+          <li>KATA PENYEMANGAT</li>
+          <li>KOLOM CURHAT</li>
         </ul>
       </div>
     </div>
@@ -30,7 +30,7 @@
         
         <!-- Add a <div> tag with the "contents-item" class -->
         <div class="contents-item">
-          <img src="https://https://twitter.com/Lian1i4n/status/1306773777703862272/photo/3/wp3544184.jpg">
+          <img src="https://www.google.com/search?q=good+night+have+a+nice+dream&safe=strict&sxsrf=ALeKk01kkuwSp0WqQswb-ETcsGnUoUTxHQ:1601138444545&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiNpeTBoYfsAhXIc30KHbQKAt8Q_AUoAXoECAwQAw&biw=1242&bih=597#imgrc=0V_XebSe1M1ndM">
           <p>HTML & CSS</p>
         </div>
       </div>
@@ -41,13 +41,10 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">Eunoia</div>
+      <div class="footer-logo">HEIIII</div>
       <div class="footer-list">
         <ul>
-          <li>Tentang penulis</li>
-          <li>Daftar puisi</li>
-          <li>Puisi favorit</li>
-          <li>Media sosial</li>
+          <li>SUDAH YA, TIDUR</li>
         </ul>
       </div>
     </div>
