--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <!-- Add a <div> tag with the "contents-item" class -->
         <div class="contents-item">
-          <img src="https://www.google.com/search?q=good+night+have+a+nice+dream&safe=strict&sxsrf=ALeKk01kkuwSp0WqQswb-ETcsGnUoUTxHQ:1601138444545&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiNpeTBoYfsAhXIc30KHbQKAt8Q_AUoAXoECAwQAw&biw=1242&bih=597#imgrc=0V_XebSe1M1ndM">
+          <img src="https://www.google.com/search?q=good+night+have+a+nice+dream&safe=strict&sxsrf=ALeKk01kkuwSp0WqQswb-ETcsGnUoUTxHQ:1601138444545&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiNpeTBoYfsAhXIc30KHbQKAt8Q_AUoAXoECAwQAw&biw=1242&bih=597#imgrc=0V_XebSe1M1ndM/GD.jpg">
           <p>HTML & CSS</p>
         </div>
       </div>
