--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main">
       <div class="copy-container">
         <h1>APA KAMU NGGAK CAPEK NUGAS TERUS?<span>.</span></h1>
-        <h2>YUK MALMINGAN</h2>
+        <h2>YUK BELOK DIKIT</h2>
       </div>
       
       <div class="contents">
@@ -31,7 +31,7 @@
         <!-- Add a <div> tag with the "contents-item" class -->
         <div class="contents-item">
           <img src="https://www.google.com/search?q=good+night+have+a+nice+dream&safe=strict&sxsrf=ALeKk01kkuwSp0WqQswb-ETcsGnUoUTxHQ:1601138444545&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiNpeTBoYfsAhXIc30KHbQKAt8Q_AUoAXoECAwQAw&biw=1242&bih=597#imgrc=0V_XebSe1M1ndM/GD.jpg">
-          <p>HTML & CSS</p>
+          <p>:)))))</p>
         </div>
       </div>
       
