--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <!-- Add a <div> tag with the "contents-item" class -->
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/Deviaara/Deviaara.github.io/master/wp3544184.jpg">
+          <img src=" https://github.com/Deviaara/Deviaara.github.io/blob/master/wp3544184.jpg">
           <p>HTML & CSS</p>
         </div>
       </div>
