--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
-    <title>Devcooking</title>
+    <title>BUNGLON NYA BUND</title>
     
 <!--
 
@@ -24,8 +24,8 @@
             <!-- Black transparent bg -->
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
-                <h1 class="tm-brand-name">Mini Profile</h1>
-                <p class="tm-brand-description mb-0">simple parallax template</p>
+                <h1 class="tm-brand-name">BUNGLON TEMAN BAIKKU</h1>
+                <p class="tm-brand-description mb-0">menjadi teman curhat yang baik, sesuai dengan mood majikan</p>
               </div>
             </div>
           </div>
@@ -39,9 +39,9 @@
             <!-- White transparent bg -->
             <div class="col-md-7 tm-welcome-left-col">
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Selamat datang di toko bunglon terlaris di Gresik</h2>
+                <h2 class="tm-welcome-title">Selamat datang di toko bunglon terlaris area Gresik bund</h2>
                 <p class="pb-0">
-                  Anda tidak akan merasa kesepian jika membeli bunglon di toko kami. Tentunya si kecil aktif dan tidak pasif, penurut, mampu menjadikan ruangan anda penuh dengan kejutan sehingga hidup tidak monoton. Maka dari itu, percayakan pembelian bunglon pada kami dan anda akan mendapat pengalaman hidup berbeda
+                  Bunda tidak akan merasa kesepian jika membeli bunglon di toko kami. Tentunya si kecil aktif dan tidak pasif, penurut, mampu menjadikan ruangan bunda penuh dengan kejutan sehingga hidup tidak monoton. Maka dari itu, percayakan pembelian bunglon pada kami dan anda akan mendapat pengalaman hidup berbeda
                 </p>
               </div>
             </div>
