--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
             </div>
 
             <div class="tm-portfolio-item">
-              <div class="tm-portfolio-name text-white tm-bg-dark-grey">
+              <div class="tm-portfolio-name text-white tm-bg-dark-gray">
                 Bunglon Parson
               </div>
               <div class="tm-portfolio-description">
-                <h3 class="tm-text-dark-grey">
+                <h3 class="tm-text-dark-gray">
                  Calumma parsonii
                   
                 </h3>
