--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Welcome Section -->
-    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="hutansatu.jpg">
+    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/hutansatu.jpg">
       <div class="container-fluid tm-brand-container-outer">
         <div class="row">
           <div class="col-12">
@@ -48,7 +48,7 @@
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right">
-                
+                <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
                   silahkan melihat testimoni pelanggan kami dan anda akaan tertarik membeli satu hewan penurut ini :)
                 </p>
@@ -139,7 +139,7 @@
     <!-- End portfolio section -->
 
     <!-- Contact section -->
-    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="hutandua.jpg">
+    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img/hutandua.jpg">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
