--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Welcome Section -->
-    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/hutansatu.jpg">
+    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/gunungsatu.jpg">
       <div class="container-fluid tm-brand-container-outer">
         <div class="row">
           <div class="col-12">
@@ -139,7 +139,7 @@
     <!-- End portfolio section -->
 
     <!-- Contact section -->
-    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img/hutandua.jpg">
+    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img/lonn.jpg">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
@@ -207,7 +207,7 @@
               </div>
               <div class="text-center">
                 <button
-                  type="submit"
+                  type="KIRIM"
                   class="btn tm-btn-submit rounded-0 text-white"
                 >
                   Submit
@@ -231,6 +231,7 @@
     <!-- section -->
     <script src="js/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
+    <script src="js/java.js"></script>
     <script>
       function detectMsBrowser() {
         using_ms_browser =
