--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
         <!-- row -->
         <div class="row">
           <footer class="col-12">
-            <p class="text-center tm-copyright-text">
+            <p class="text-center tm-copyright-text text-white">
             "Di dalam bunglon yang aktif terdapat bunda yang aktif"
             
-            - Design: Template Mo</p>
+            </p>
           </footer>
         </div>
       </div>
