--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="tm-welcome-left">
                 <h2 class="tm-welcome-title">Selamat datang di toko bunglon terlaris area Gresik bund</h2>
                 <p class="pb-0">
-                  Bunda tidak akan merasa kesepian jika membeli bunglon di toko kami. Tentunya si kecil aktif dan tidak pasif, penurut, mampu menjadikan ruangan bunda penuh dengan kejutan sehingga hidup tidak monoton. Maka dari itu, percayakan pembelian bunglon pada kami dan anda akan mendapat pengalaman hidup berbeda
+                  Bunda tidak akan merasa kesepian jika membeli bunglon di toko kami. Tentunya si kecil aktif dan tidak pasif, penurut, mampu menjadikan ruangan bunda penuh dengan kejutan sehingga hidup tidak monoton. Maka dari itu, percayakan pembelian bunglon pada kami dan bunda akan mendapat pengalaman hidup berbeda
                 </p>
               </div>
             </div>
