--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <div class="col-12">
             <!-- Logo Area -->
             <!-- Black transparent bg -->
-            <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
+            <div class="ml-auto mr-0 tm-bg-purple-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">BUNGLON TEMAN BAIKKU</h1>
-                <p class="tm-brand-description mb-0">menjadi teman curhat yang baik, sesuai dengan mood majikan</p>
+                <p class="tm-brand-description mb-1">menjadi teman curhat yang baik, sesuai dengan mood majikan</p>
               </div>
             </div>
           </div>
