--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   id="contact_message"
                   name="contact_message"
                   class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="pesan sebagai bahan introspeksi"
+                  placeholder="pesan agar owner sadar diri dia sudah dengan yang lain"
                   required
                 ></textarea>
               </div>
