--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="ml-auto mr-0 tm-bg-purple-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">BUNGLON TEMAN BAIKKU</h1>
-                <p class="tm-brand-description mb-1">menjadi teman curhat yang baik, sesuai dengan mood majikan</p>
+                <p class="tm-brand-description mb-1">Bunglon tidak akan meninggalkan bunda sendirian, tentu berbeda dengan dia yang hanya pemberi harapan :)</p>
               </div>
             </div>
           </div>
@@ -50,7 +50,7 @@
               <div class="tm-welcome-right">
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
-                  silahkan melihat testimoni pelanggan kami dan anda akaan tertarik membeli satu hewan penurut ini :)
+                  silahkan melihat testimoni pelanggan kami dan anda akan tertarik membeli satu hewan penurut ini :)
                 </p>
               </div>
             </div>
