--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Welcome Section -->
-    <section id="Welcome" class="parallax-window" data-parallax="scroll" data-image-src="img/gunungsatu.jpg">
+    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/gunungsatu.jpg">
       <div class="container-fluid tm-brand-container-outer">
         <div class="row">
           <div class="col-12">
